<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


<!--    i use liner layout to arrange views vertically-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".onboarding.LoginFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:contentDescription="@string/green_shoes"
            android:src="@drawable/shoe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="@font/acme"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layoutmargin"
            android:backgroundTint="@color/teal_700"
            android:ems="10"
            android:fontFamily="@font/acme"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edEmail" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layoutmargin"
            android:backgroundTint="#54A69F"
            android:fontFamily="@font/acme"
            android:text="@string/login"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edPassword" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layoutmargin"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/layoutmargin"
            android:backgroundTint="#54A69F"
            android:fontFamily="@font/acme"
            android:text="@string/sign_up"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/loginbtn"
            app:layout_constraintStart_toStartOf="@+id/loginbtn"
            app:layout_constraintTop_toBottomOf="@+id/loginbtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>