<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <!--    i use liner layout to arrange views vertically-->

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".onboarding.OnBoardingFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:contentDescription="@string/green_shoes"
            android:src="@drawable/shoe" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:fontFamily="@font/acme"
            android:text="@string/pick_every_product_that_you_want"
            android:textColor="#54A69F"
            android:textSize="50sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layoutmargin"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/layoutmargin"
            android:backgroundTint="#54A69F"
            android:text="@string/coni_nue"
            android:textSize="20sp" />


    </LinearLayout>
</layout>