<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="shoselist"
            type="com.ayaabdelaziz.shoestoreapp.onboarding.Shoe" />

        <import type="com.ayaabdelaziz.shoestoreapp.onboarding.DoubleConverter" />
    </data>

    <!--    i use liner layout to arrange views vertically && horizontally-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F6EFEF"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@string/shose_name"
                android:textColor="@color/maincolor"
                android:textSize="25sp" />


            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@{shoselist.shoeName}"
                android:textColor="@color/maincolor"
                android:textSize="25sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@string/shose_type"
                android:textColor="@color/maincolor"
                android:textSize="25sp" />


            <TextView
                android:id="@+id/txtType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@{shoselist.type}"
                android:textColor="@color/maincolor"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@string/shose_size"
                android:textColor="@color/maincolor"
                android:textSize="25sp" />


            <TextView
                android:id="@+id/txtSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@{DoubleConverter.doubleToString(shoselist.size)}"
                android:textColor="@color/maincolor"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@string/shose_desc"
                android:textColor="@color/maincolor"
                android:textSize="25sp" />


            <TextView
                android:id="@+id/txDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@{shoselist.desc}"
                android:textColor="@color/maincolor"
                android:textSize="25sp" />

        </LinearLayout>


    </LinearLayout>
</layout>